--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f99788">  <td>25/01/25 15:56:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HalaTala.myFirstTest()[pri:0, instance:com.halatala.HalaTala@130d63be]">myFirstTest</td> 
+<tr bgcolor="ef8d72">  <td>25/01/29 14:33:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApplication()[pri:0, instance:com.facebook_locators.DirectLocators@799f10e1]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f99788">  <td>25/01/29 14:33:00</td>   <td>-3444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DirectLocators.idLocator()[pri:0, instance:com.facebook_locators.DirectLocators@799f10e1]">idLocator</td> 
   <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="ef8d72">  <td>25/01/29 14:32:55</td>   <td>-8919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApplication()[pri:0, instance:com.facebook_locators.DirectLocators@799f10e1]">&gt;&gt;openApplication</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
